# CppXBase

./: CMakeLists.txt  FindBOOST.cmake  README.md  boost_complete_setup.sh
Base/: CMakeLists.txt  console.h
CMakeModules/: FindZookeeper.cmake
include/Base/: log.h  os.h
src/: empty.cpp
